# gavin-the-fish

./: CONVERSATION_README.md  README.md  agent_config.json  pyproject.toml  pytest.ini  run_conversation.py  run_enhanced_conversation.py  run_server.py  run_simple_conversation.py  run_tests.py  test_jobs_sync_threshold.py
src/gavin_the_fish/: __init__.py  agent.py  agent_instance.py  agent_tools.py  config.py  conversation.py  custom_audio_interface.py  exceptions.py  gift_credits.py  job_registry.py  job_utils.py  middleware.py  server.py  tool_logger.py  tools.py
src/gavin_the_fish/routers/: confetti.py  fibonnaci.py  gift_credits.py  goose.py  jobs.py  timer.py  xi_status.py  youtube.py  zendesk_ticket.py
src/gavin_the_fish/tools/: __init__.py  confetti.py  core.py  decorator.py  fibbonaci.py  gift_credits.py  goose.py  jobs.py  timer.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_fibonacci.py  test_jobs_sync_threshold.py  test_timer.py
tests/unit/: __init__.py  test_job_registry.py  test_tool_registry.py
